<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFbActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/facebookProfileToolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@drawable/fb_gradient_toolbar"
        android:theme="@style/customToolbarStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/fb_gradient_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/facebookProfileToolbar">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profileImgFb"
            android:layout_width="121dp"
            android:layout_height="116dp"
            android:contentDescription="@string/image"
            android:scaleType="centerCrop"
            android:src="@drawable/userr"
            app:civ_border_color="@color/black"
            app:civ_border_width="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="20dp"
            />

        <TextView
            android:id="@+id/userNameFb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/username"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="@+id/profileImgFb"
            app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintStart_toStartOf="@+id/profileImgFb"
            app:layout_constraintTop_toBottomOf="@+id/profileImgFb" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="-30dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:cardElevation="10dp"
        app:cardCornerRadius="5dp"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_details"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_bold"
                android:textSize="25sp"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#605F5F" />
            <LinearLayout
                android:id="@+id/ll_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                >
                <TextView
                    android:id="@+id/tv_name_fb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:layout_gravity="center_vertical"
                    android:text="@string/first_name"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@+id/userNameFb"
                    tools:layout_editor_absoluteX="20dp" />


                <TextView
                    android:id="@+id/nameFb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="20dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/display_first_name"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    tools:layout_editor_absoluteX="270dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp">

                <TextView
                    android:id="@+id/tv_name_last_fb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/last_name"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/last_nameFb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="40dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/display_last_name"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="@+id/nameFb"
                    app:layout_constraintTop_toBottomOf="@+id/nameFb" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp">
                <TextView
                    android:id="@+id/tv_email_fb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/email_tv"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/emailfb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="60dp"
                    android:ellipsize="marquee"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:singleLine="true"
                    android:scrollHorizontally="true"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/userEmail"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </LinearLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/fbLogout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                app:rippleColor="@color/fb"
                app:icon="@drawable/ic_ifacebook"
                app:iconTint="@color/fb"
                app:strokeColor="@color/fb"
                app:strokeWidth="1dp"
                android:padding="8dp"
                android:layout_gravity="center"
                android:text="@string/goodbye_text_facebook"
                android:textAllCaps="false"
                android:textColor="@color/fb"
                android:textStyle="bold"
                app:backgroundTint="#FBFAFA"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ll_email" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/copyright"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>